--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -10,13 +10,24 @@ spring:
       server:
         webflux:
           routes:
+            # Route for /auth/** to auth-service
+            - id: auth-service-route
+              uri: http://auth-service:4005
+              predicates:
+                - Path=/auth/**
+              filters:
+                - StripPrefix=1
+
+            # Route for /api/patients** to patient-service
             - id: patient-service-route
               uri: http://patient-service:4000
               predicates:
                 - Path=/api/patients/**
               filters:
                 - StripPrefix=1
+                - JwtValidation
 
+            # Route for /api/docs/patients to patient-service /v3/api-docs
             - id: api-docs-patient-route
               uri: http://patient-service:4000
               predicates:
