--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -5,10 +5,22 @@ spring:
   application:
     name: api-gateway
 
+  data:
+    redis:
+      host: ${REDIS_HOST:redis}
+      port: ${REDIS_PORT:6379}
+
   cloud:
     gateway:
       server:
         webflux:
+          default-filters:
+            - name : RequestRateLimiter
+              args:
+                redis-rate-limiter.burstCapacity: 5
+                redis-rate-limiter.replenishRate: 5
+                key-resolver: "#{@ipKeyResolver}"
+
           routes:
             # Route for /auth/** to auth-service
             - id: auth-service-route
